# sproj_2024

./: .gitignore  CMakeLists.txt  README.md  TODO.md
build_tools/: build  test
cmake/: cpm.cmake
sproj_2024/: CMakeLists.txt
sproj_2024/audio/: AudioClock.h  AudioPlayer.h  Clock.cpp  Clock.h  MainAudio.cpp  MainAudio.h  Quantizer.cpp  Quantizer.h  Record.cpp  Record.h  Recorder.h  SPAudioProcessor.cpp  SPAudioProcessor.h  Scheduler.h  Track.h
sproj_2024/audio/include/: AudioPlayer.h  MainAudio.h  Recorder.h  SPAudioProcessor.h  Track.h
sproj_2024/audio/src/: MainAudio.cpp  SPAudioProcessor.cpp
sproj_2024/controller/: ClockController.cpp  ClockController.h
sproj_2024/gui/: ClockGUI.cpp  ClockGUI.h  ControlDeckGUI.h  DeckGUI.h  DeviceSelectionMenu.h  DummyClip.h  FreeDeckGUI.h  MainComponent.cpp  MainComponent.h  MainDeckGUI.h  MainDeckHolder.h  MainDeckTiles.h  MainWindow.cpp  MainWindow.h  MenuComponent.h  MixDeckGUI.h  RulerDeckGUI.h  SPCommandManager.h
sproj_2024/helpers/: Identifiers.h  helpers.h
sproj_2024/main/: Main.cpp
sproj_2024/source/: Main.cpp
sproj_2024_lib/: sproj_2024_lib.cpp  sproj_2024_lib.h
src/: CMakeLists.txt
src/audio/: AudioClock.h  MainAudio.h  Recorder.h  SPAudioProcessor.cpp  SPAudioProcessor.h  Track.h
src/gui/: ControlDeckGUI.h  DeckGUI.h  DeviceSelectionMenu.h  DummyClip.h  FreeDeckGUI.h  MainWindow.cpp  MixDeckGUI.h  RulerDeckGUI.h  SPCommandManager.h
src/helpers/: helpers.h
src/main/: Main.cpp
test/: CMakeLists.txt
test/audio_test/: MainAudioTest.cpp  audio.test.js
test/end_to_end_tests/: audio.test.js
test/source/: plugin_test_cmake_test.cpp
test/unit_tests/: AudioClockTest.cpp  MainAudioTest.cpp  TrackTest.cpp
